📦 NEW: Add rapid game variation